--- a/src/devtools/views/HooksTree.css
+++ b/src/devtools/views/HooksTree.css
@@ -27,6 +27,8 @@
 
 .Value {
   color: var(--color-attribute-value);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .None {
